# hue-app

./: .env.development  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json
.claude/: launch.json
docs/: calendar-integration-plan.md  cloud-control-plan.md  homes-and-membership-plan.md  local-network-presence-plan.md  monetization-and-stack-plan.md  pc-sync-plan.md  per-bridge-sync-box-plan.md  pomodoro-focus-rituals-plan.md  selection-states-audit.md  sync-box-plan.md
docs/HUE/: 01-lights-api.md  02-groups-api.md  03-schedules-api.md  04-scenes-api.md  05-sensors-api.md  06-rules-api.md  07-configuration-api.md  09-resourcelinks-api.md  10-capabilities-api.md  README.md  bridge-maximum-settings.md  cloud2cloud-getting-started.md  color-conversion-formulas-rgb-to-xy-and-back.md  core-concepts.md  error-messages.md  (+13 more)
src/: App.css  App.tsx  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: pc_sync_spike.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_settings.rs  bridges.rs  discovery.rs  events.rs  grouped_lights.rs  host_sync.rs  lights.rs  mod.rs  rooms.rs  scenes.rs  settings.rs  sync_box.rs  widget.rs  zones.rs
src-tauri/src/services/: hue_client.rs  mod.rs  sync_box_client.rs
src-tauri/src/services/entertainment/: analysis.rs  audio.rs  capture.rs  credentials.rs  displays.rs  dtls.rs  engine.rs  mod.rs  music.rs  preferences.rs  protocol.rs  snapshot.rs
(+226 files in other folders)
