[package]
name = "hue-desktop"
version = "0.1.0"
description = "Hue Desktop"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hue_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["time", "sync", "net", "macros"] }
keyring = { version = "3", features = ["windows-native"] }
mdns-sd = "0.20.0"
webrtc-dtls = "0.12.0"
webrtc-util = "0.11"
half = "2"
rustfft = "6.4"

[target.'cfg(windows)'.dependencies]
wasapi = "0.23"
windows-capture = "2.0.0"
windows-registry = "0.6"
windows-sys = { version = "0.59", features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
